--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <a class="brand" href="/">LeftoverChef</a>
     <nav class="nav">
       <a href="/">Home</a>
-      <a href="https://github.com" target="_blank" rel="noreferrer">GitHub</a>
+      <a href="https://github.com/deAdler-alt/leftover-chef.git" target="_blank" rel="noreferrer">GitHub</a>
     </nav>
   </header>
   <div class="hero__copy container">
